--- a/Car_prices.ipynb
+++ b/Car_prices.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Car dataset price prediction from kaggle**"
+    "**Car dataset price prediction - SELL-CAR-O**"
    ]
   },
   {
